<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">ViewGroup Performance</string>
  <string name="url">http://www.android10.org/</string>

  <string name="relative_layout_test">Relative Layout Test</string>
  <string name="linear_layout_test">Linear Layout Test</string>
  <string name="frame_layout_test">Frame Layout Test</string>

  <string name="button1">Button 1</string>
  <string name="button2">Button 2</string>
  <string name="button3">Button 3</string>
  <string name="button4">Button 4</string>
  <string name="button5">Button 5</string>
  <string name="button6">Button 6</string>
  <string name="button7">Button 7</string>
  <string name="button8">Button 8</string>
  <string name="button9">Button 9</string>
  <string name="button10">Button 10</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
